--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: Notes
-description: ©2021-2022 Gihan Rathnayake·Powered by <a href="https://fastpages.fast.ai/">FastPages.ai</a>
+description: ©2021-2022 Gihan Rathnayake · Powered by [FastPages.ai](https://fastpages.fast.ai/)
 github_username: gihanrt
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "lostnotes"
