--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Notes
-description: ©2021-2022 Gihan Rathnayake · Powered by [FastPages.ai](https://fastpages.fast.ai/)
+title: Lost Notes
+description: ©2021-2022 Gihan Rathnayake · Powered by FastPages.ai
 github_username: gihanrt
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "lostnotes"
